Working on Brand CRUD

--- a/Pustok_Project/Pustok_Project.csproj
+++ b/Pustok_Project/Pustok_Project.csproj
@@ -10,6 +10,7 @@
     <Folder Include="Data\Migrations\" />
     <Folder Include="ViewComponents\" />
     <Folder Include="Views\Shared\Components\Category\" />
+    <Folder Include="wwwroot\client\assets\image\brands\" />
   </ItemGroup>
 
   <ItemGroup>
