Done with product Create

--- a/Pustok_Project/Pustok_Project.csproj
+++ b/Pustok_Project/Pustok_Project.csproj
@@ -11,6 +11,7 @@
     <Folder Include="ViewComponents\" />
     <Folder Include="Views\Shared\Components\Category\" />
     <Folder Include="wwwroot\client\assets\image\brands\" />
+    <Folder Include="wwwroot\client\assets\image\productss\" />
   </ItemGroup>
 
   <ItemGroup>
